--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,72 +1,182 @@
 @import "./variables";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
+//GLOBAL STYLING
 body {
-    background: rgb(0,39,71);
-    background: -webkit-linear-gradient(0deg, rgba(0,39,71,1) 0%, rgba(0,80,146,1) 100%);
-    background: linear-gradient(0deg, rgba(0,39,71,1) 0%, rgba(0,80,146,1) 100%);
+  background: rgb(0, 39, 71);
+  background: -webkit-linear-gradient(
+    0deg,
+    rgba(0, 39, 71, 1) 0%,
+    rgba(0, 80, 146, 1) 100%
+  );
+  background: linear-gradient(
+    0deg,
+    rgba(0, 39, 71, 1) 0%,
+    rgba(0, 80, 146, 1) 100%
+  );
 }
 
 header {
-    & #brand-icon {
-        height: 4rem;
+  z-index: 5;
+  & #brand-icon {
+    height: 4rem;
+  }
+
+  & .dropdown-toggle {
+    width: 4rem;
+    & #header-profile-icon {
+      height: 4rem;
+    }
+    &::after {
+      border: none;
+    }
+  }
+}
+
+form {
+  & #header-search-icon {
+    max-height: 2rem;
+    max-width: 2rem;
+  }
+
+  & input {
+    border: none;
+
+    &:focus {
+      box-shadow: none;
+    }
+  }
+
+  & .search-input {
+    width: 100%;
+  }
+}
+
+#bg-image {
+  min-height: 100%;
+  width: 40%;
+  background-image: url("../../assets/images/pearls-ring.jpg");
+  background-size: cover;
+  background-position-y: bottom;
+  z-index: 1;
+}
+
+// WELCOME
+#welcome {
+  & main {
+    & #big-image {
+      & img {
+        object-fit: cover;
+        min-height: 110%;
+        min-width: 100%;
+        transform: translateY(-18%);
+      }
     }
 
-    & form {
-        & #header-search-icon {
-            max-height: 2rem;
-            max-width: 2rem;
-        }
-        & .search-input {
-            width: 100%;
-            border: none;
+    & #search-icon {
+      max-height: 2rem;
+      max-width: 2rem;
 
-            &:focus {
-                box-shadow: none;
-            }
-        }
-    }
+      & .search-input {
+        width: 100%;
+        border: none;
 
-    & .dropdown-toggle {
-        width: 4rem;
-        & #header-profile-icon {
-            height: 4rem;
+        &:focus {
+          box-shadow: none;
         }
-        &::after {
-            border: none;
-        }
+      }
     }
+  }
+}
+
+// LOGIN & SIGNUP
+#login {
+  .container {
+    z-index: 4;
+  }
 }
 
 @media (max-width: 766px) {
-    #brand-name {
-        font-size: 1.3em;
+  #brand-name {
+    font-size: 1.3em;
+  }
+
+  form {
+    max-height: 4rem;
+    & #header-search-icon {
+      height: 2rem;
+      width: 2rem;
     }
-    form {
-        max-height: 4rem;
-        #header-search-icon {
-            height: 2rem;
-            width: 2rem;
-        }
-        & .search-input {
-            max-height: 2rem;
-        }
+    & .search-input {
+      max-height: 2rem;
     }
+  }
+
+  #welcome {
+    & header {
+      & .navbar-brand {
+        width: 50% !important;
+      }
+      & .nav-item {
+        width: 50% !important;
+      }
+    }
+
+    & main {
+      flex-direction: column !important;
+      align-items: flex-end;
+      margin-right: 0rem;
+
+      & #big-image {
+        border-radius: 0 0 50% 50%;
+        padding: 0;
+        height: 17rem;
+        & img {
+          height: 17rem;
+          transform: translateY(-6%);
+        }
+      }
+
+      & #welcome-text {
+        height: 50% !important;
+        margin-right: 0.5rem !important;
+
+        & #welcome-login {
+          align-items: center;
+          margin-left: 0 !important;
+        }
+
+        & h2 {
+          font-size: 1.3rem !important;
+        }
+
+        & p,
+        span {
+          font-size: 1.1rem !important;
+        }
+
+        & .justify-content-evenly {
+          max-width: 20rem;
+          width: 100% !important;
+        }
+      }
+    }
+  }
 }
 
-@media (max-width: 575px) { 
-    header {
-        & #brand-icon {
-            height: 3rem;
-        }
-
-        & .dropdown-toggle {
-            width: 3rem;
-            height: 3rem;
-
-            & #header-profile-icon {
-                height: 3rem;
-            }
-        }
+@media (max-width: 575px) {
+  header {
+    & #brand-icon {
+      height: 3rem;
     }
+
+    & .dropdown-toggle {
+      width: 3rem;
+      height: 3rem;
+
+      & #header-profile-icon {
+        height: 3rem;
+      }
+    }
+  }
 }
