--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "./form-check";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 //GLOBAL STYLING
@@ -39,7 +40,8 @@ form {
     max-width: 2rem;
   }
 
-  & input {
+  & .form-control, 
+  & .search-input {
     border: none;
 
     &:focus {
@@ -58,12 +60,17 @@ form {
   background-image: url("../../assets/images/pearls-ring.jpg");
   background-size: cover;
   background-position-y: bottom;
+  background-position-x: 45%;
   z-index: 1;
 }
 
 // WELCOME
 #welcome {
   & main {
+    & #welcome-text {
+      max-width: 100%;
+    }
+
     & #big-image {
       & img {
         object-fit: cover;
@@ -80,17 +87,18 @@ form {
       & .search-input {
         width: 100%;
         border: none;
-
-        &:focus {
-          box-shadow: none;
-        }
       }
+    }
+    
+    & #welcome-login {   
+    max-width: 100%;
     }
   }
 }
 
 // LOGIN & SIGNUP
-#login {
+#login,
+#signup {
   .container {
     z-index: 4;
   }
@@ -176,6 +184,22 @@ form {
 
       & #header-profile-icon {
         height: 3rem;
+      }
+    }
+  }
+
+  #login,
+  #signup {
+    #bg-image {
+      width: 50%;
+    }
+
+    & form {
+      font-size: 0.8em;
+
+      & #rememberCheck {
+        width: 1rem;
+        height: 1rem;
       }
     }
   }
