signin and login function done. started doFetch function

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -119,6 +119,12 @@ form {
   & .container {
     z-index: 4;
   }
+
+  & #nameFeedback,
+  & #emailFeedback,
+  & #passwordFeedback {
+    color: $secondary;
+  }
 }
 
 // LISTING
