--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -26,7 +26,7 @@ $body-color: $light;
 
 h1,
 h2 {
-  font-family: "Aqua";
+  font-family: "Aqua", Tahoma, 'Segoe UI', Geneva, Verdana, sans-serif;
 }
 
 h3,
@@ -37,7 +37,7 @@ li,
 span,
 div,
 form {
-  font-family: "Merriweather";
+  font-family: "Merriweather", Georgia, 'Times New Roman', Times, serif;
 }
 
 //ACCORDION
